# extensions

./: .gitignore  LICENSE  README.md  index.json  index.min.json  registry.toml
.github/workflows/: build.yml
extensions/auto-theme/: Cargo.toml  extension.toml
extensions/auto-theme/src/: lib.rs
extensions/ayu/: extension.toml
extensions/catppuccin/: catppuccin-frappe.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  extension.toml
extensions/command-timer/: Cargo.toml  extension.toml  plugin.wasm
extensions/directory-info/: Cargo.toml  extension.toml  plugin.wasm
extensions/everforest/: everforest-dark.toml  extension.toml
extensions/git-status/: Cargo.toml  extension.toml  plugin.wasm
extensions/github-colors/: extension.toml  github-dark.toml
extensions/kanagawa/: extension.toml  kanagawa.toml
extensions/notifications/: Cargo.toml  extension.toml
extensions/rose-pine/: extension.toml  rose-pine-moon.toml  rose-pine.toml
extensions/smart-history/: Cargo.toml  extension.toml  plugin.wasm
plugins/: auto-theme-v0.1.0.wasm  command-timer-v0.1.0.wasm  directory-info-v0.1.0.wasm  git-status-v0.1.0.wasm  git-status-v0.2.0.wasm  git-status.toml  notifications-v0.1.0.wasm  notifications-v1.0.0.wasm  notifications.toml
plugins/auto-theme/: Cargo.toml  plugin.toml
plugins/auto-theme/src/: lib.rs
plugins/command-timer/: plugin.toml
plugins/directory-info/: Cargo.toml  plugin.toml
plugins/git-status/: Cargo.toml  plugin.toml
plugins/notifications/: Cargo.toml  plugin.toml
plugins/notifications/src/: lib.rs
scripts/: build-all.sh
(+10 files in other folders)
