[package]
name = "siltty-plugin-auto-theme"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
siltty-plugin-sdk = { git = "https://github.com/siltty/siltty", path = "crates/siltty-plugin-sdk" }

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
