[package]
name = "siltty-plugin-notifications"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
siltty-plugin-sdk = { path = "/Users/grigorij/Documents/GreatLove/Crazy/Siltty/crates/siltty-plugin-sdk" }

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
